# criador-marketing-mmm

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: casos_uso.md  guia_interpretacao.md  metodologia.md
notebooks/: 01_mmm_completo.ipynb  02_adstock_saturacao.ipynb  03_otimizacao_cenarios.ipynb
src/: __init__.py  config.py  logger.py
src/api/: __init__.py  app.py
src/features/: __init__.py  adstock.py  engineering.py  saturation.py
src/ingestion/: __init__.py  loader.py  validator.py
src/models/: __init__.py  cross_validation.py  importance.py  regression.py  regularized.py
src/optimization/: __init__.py  budget.py  scenarios.py
src/visualization/: __init__.py  charts.py  dashboard.py  export.py
tests/: conftest.py  test_api.py  test_models.py
