[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "marketing-mix-model"
version = "0.1.0"
description = "Ferramenta de Marketing Mix Modeling"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"
